# externship-doses

./: .env  .gitignore  README.md  docker-compose.yml  setup.sh  test.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
doses-api/: Dockerfile  app.py  openapi.yaml  pyproject.toml  structure.sql
doses-api/doses-api/: Chart.yaml  values.yaml
doses-api/doses-api/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
doses-api/doses-api/templates/tests/: test-connection.yaml
frontend/: Dockerfile  next.config.js  nginx.conf  package-lock.json  package.json
frontend/app/: layout.css  layout.js  page.css  page.js
frontend/app/doses/: layout.js  page.css  page.js
frontend/app/doses/new/: page.js
frontend/data/: sampleDoseResponse.json
frontend/frontend/: values.yaml
frontend/frontend/templates/: deployment.yaml
frontend/lib/: api.js
frontend/pages/api/: doses.js
infrastructure/: main.tf  variable.tf
infrastructure/krakend/: values.yaml
infrastructure/krakend/templates/: config.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
infrastructure/nginx/: nginx.conf  values.yaml
infrastructure/nginx/templates/: config.yaml  deployment.yaml  ingress.yaml  service.yaml
